corrigindo metados de template

--- a/k8s/app.deployment.yaml
+++ b/k8s/app.deployment.yaml
@@ -10,7 +10,7 @@ spec:
     matchLabels:
       app: app-fastapi
   template:
-    matadata:
+    metadata:
       labels:
         app: app-fastapi
     spec:
