--- a/k8s/app.deployment.yaml
+++ b/k8s/app.deployment.yaml
@@ -19,5 +19,22 @@ spec:
           image: anabeatriz02/main-python:c23a50a6657ca75d2f9afc6d5eb444732a67088d
           ports:
           - containerPort: 80
-  
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: app-fastapi
+  labels:
+    app: app-fastapi
+spec:
+  type: NodePort
+  selector:
+    app: app-fastapi
+  ports:
+  - name: "app-fastapi-service"
+    port: 8080
+    targetPort: 80
+    NodePort: 30000
     
