--- a/k8s/main-python.yaml
+++ b/k8s/main-python.yaml
@@ -1,40 +1,39 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: app-fastapi
-  labels:
-    app: app-fastapi
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: app-fastapi
-  template:
+apiVersion: apps/v1 # Versão da API para Deployment
+kind: Deployment # Tipo de recurso é Deployment
+metadata: 
+  name: app-fastapi # Nome do Deployment
+  labels: # Rótulos para o Deployment
+    app: app-fastapi # Rótulo app: app-fastapi
+spec: # Especificação do Deployment
+  replicas: 1 # Deseja 1 réplica do Pod
+  selector: # Define como encontrar os Pods
+    matchLabels: # Rótulos que devem ser correspondidos
+      app: app-fastapi # Seleciona Pods com este rótulo
+  template: # Modelo para criação dos Pods
     metadata:
-      labels:
-        app: app-fastapi
-    spec:
-      containers:
-        - name: app-fastapi
-          image: anabeatriz02/main-python:c23a50a6657ca75d2f9afc6d5eb444732a67088d
-          ports:
-          - containerPort: 80
+      labels: 
+        app: app-fastapi # Rótulo app: app-fastapi (para ser selecionado)
+    spec: # Especificação do Pod
+      containers: # Lista de contêineres no Pod
+        - name: app-fastapi # Nome do contêiner
+          image: anabeatriz02/main-python:81fd3511e0c6dabc901be096b4324dfd5904eec5 # Imagem Docker Hub
+          ports: # Portas que o contêiner expõe
+            - containerPort: 80 # A aplicação ouve na porta 80
 
----
+--- # Separador de documentos YAML (próximo recurso)
 
-apiVersion: v1
-kind: Service
-metadata:
-  name: app-fastapi
-  labels:
-    app: app-fastapi
-spec:
-  type: NodePort
-  selector:
-    app: app-fastapi
-  ports:
-  - name: "app-fastapi-service"
-    port: 8080
-    targetPort: 80
-    NodePort: 30000
-    
+apiVersion: v1 # Versão da API para Service
+kind: Service # Tipo de recurso é Service
+metadata: # Metadados 
+  name: app-fastapi # Nome do Service
+  labels: # Rótulos para o Service
+    app: app-fastapi # Rótulo app: app-fastapi
+spec: # Especificação do Service
+  type: NodePort # Tipo de Service: NodePort (acessível externamente)
+  selector: # Define quais Pods serão alvos
+    app: app-fastapi # Encaminha tráfego para Pods com este rótulo
+  ports: # Lista de portas do Service
+    - name: "app-fastapi-service" # Nome da porta
+      port: 8080 # Porta interna do Service (ClusterIP)
+      targetPort: 80 # Porta do contêiner para onde o tráfego é enviado
+      NodePort: 30000 # Porta de acesso externo em cada Node
